--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   </head>
   <body>
     <div id="root"></div>
+    <script>
+      var global = window;
+    </script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
